--- a/lienhe.html
+++ b/lienhe.html
@@ -41,7 +41,7 @@
     <section>
       <h2>Kết nối mạng xã hội</h2>
       <p class="mangxahoi">
-        📧 Email: <a class="email" href="gaday4792@gmail.com">gaday4792@gmail.com</a><br>
+        📧 Email: <a class="email">gaday4792@gmail.com</a><br>
         🌐 Facebook: <a class="facebook" href="https://www.facebook.com/gakhong.bietgay.167" target="_blank">Toàn Đoàn</a><br>
         ▶️ YouTube: <a class="youtube" href="https://www.youtube.com/@Pillow9Fun" target="_blank">Pillow_9Fun</a>
 
