--- a/lienhe.html
+++ b/lienhe.html
@@ -41,10 +41,9 @@
     <section>
       <h2>Kết nối mạng xã hội</h2>
       <p class="mangxahoi">
-        
         🌐 Facebook: <a class="facebook" href="https://www.facebook.com/gakhong.bietgay.167" target="_blank">Toàn Đoàn</a><br>
         ▶️ YouTube: <a class="youtube" href="https://www.youtube.com/@Pillow9Fun" target="_blank">Pillow_9Fun</a>
-
+        📧 Email: <a class="email">td53924@gmail.com</a>
       </p>
     </section>
   </main>
