--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="gioithieu.html">Giới thiệu</a>
     <a href="blog.html">Blog</a>
     <a href="lienhe.html">Liên hệ</a>
-    <button id="toggle-dark" aria-label="Chuyển chế độ sáng/tối">🌓</button>
+    <button class="nutbam" id="toggle-dark" aria-label="Chuyển chế độ sáng/tối">🌓</button>
   </nav>
 
   <main>
