--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section id="poetry">
       <h2>Tập Thơ</h2>
-      <a href="#" onclick="togglePoem(); return false;">Ngã Mộng Đại Hải</a>
+      <button href="#" onclick="togglePoem(); return false;">Ngã Mộng Đại Hải</button>
       <div id="poem" class="poem">
         <h3>Trì Ngư</h3>
         <p>
